--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.btn {
+  @apply inline-block px-4 py-2 rounded-md text-lg font-semibold text-center cursor-pointer shadow-md transition duration-300 ease-in-out;
+}
+
+.btn-primary {
+  @apply bg-indigo-600 text-white hover:bg-indigo-700;
+}
+
+.btn-secondary {
+  @apply bg-gray-100 text-indigo-600 border border-gray-300 hover:bg-gray-200;
+}
+
+
