--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,7 +4,7 @@
 
 
 .btn {
-  @apply inline-block px-4 py-2 rounded-md text-lg font-semibold text-center cursor-pointer shadow-md transition duration-300 ease-in-out;
+  @apply text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
 }
 
 .btn-primary {
