--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,17 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ===================== */
+/*        Buttons        */
+/* ===================== */
 
 .btn {
-  @apply text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
+  @apply text-white mr-2 mb-2 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center focus:ring-4;
 }
 
-.btn-primary {
-  @apply bg-indigo-600 text-white hover:bg-indigo-700;
+.btn-twiter {
+  @apply bg-[#1da1f2] hover:bg-[#1da1f2]/90 focus:ring-[#1da1f2] focus:outline-none focus:ring-[#1da1f2]/50;
 }
 
-.btn-secondary {
-  @apply bg-gray-100 text-indigo-600 border border-gray-300 hover:bg-gray-200;
-}
-
+/* ===================== */
+/*        Dark Mode      */
+/* ===================== */
 
