--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,9 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* ===================== */
-/*        Buttons        */
-/* ===================== */
+
 
 .btn {
   @apply text-white mr-2 mb-2 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center focus:ring-4;
@@ -13,8 +11,8 @@
 .btn-twiter {
   @apply bg-[#1da1f2] hover:bg-[#1da1f2]/90 focus:ring-[#1da1f2] focus:outline-none focus:ring-[#1da1f2]/50;
 }
+.btn-apple {
+  @apply bg-[#000] hover:bg-[#000]/90 focus:ring-[#000] focus:outline-none focus:ring-[#000]/50;
+}
 
-/* ===================== */
-/*        Dark Mode      */
-/* ===================== */
 
